<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Title"
        android:layout_width="287dp"
        android:layout_height="96dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/bold"
        android:text="Welcome Users"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="33sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.167" />

    <Button
        android:id="@+id/infoBtn"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/button"
        android:fontFamily="@font/light"
        android:shadowColor="@color/Grey"
        android:text="@string/info"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/reqBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <Button
        android:id="@+id/reqBtn"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:background="@drawable/button"
        android:fontFamily="@font/light"
        android:text="@string/reqPickUp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/immediateRespBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/infoBtn" />

    <Button
        android:id="@+id/immediateRespBtn"
        android:layout_width="250dp"
        android:layout_height="53dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/button"
        android:fontFamily="@font/light"
        android:text="@string/ImmResp"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toTopOf="@+id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reqBtn" />

    <TextView
        android:id="@+id/login"
        android:layout_width="116dp"
        android:layout_height="33dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/light"
        android:text="@string/login"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>